# pyWFC3

./: .gitignore  LICENSE  MANIFEST.in  README.md  project.toml  pyproject.toml  setup.cfg
gui/: select_data.py
src/pywfc3/flats/: MakeDFlat.py  __init__.py  make_dflat.py
src/pywfc3/gui/: select_data.py
src/pywfc3/parameters/: dflat.json
src/pywfc3/utils/: __init__.py  check_directory.py  get_output_directory.py
