[metadata]
name = pyWFC3
version = 0.0.1
url = https://github.com/pyAstroDude/pyWFC3
author = Sachindev Shenoy
author_email = "Sachindev Shenoy" <sachin.4m.stsci@gmail.com>
description = This is a collection of codes and scripts to facilitate WDC3 data reduction and analysis.
long_description = file:README.md
license = MIT
license_file = LICENSE
calssifier =
    "License :: OSI Approved :: MIT License"

[options]
package_dir =
    =pywfc3
packages = find:
include_package_data = True
install_requires =
	astropy>=6.1
	numpy>=2.2
	pandas>=2.2
	pyds9>=1.8
	PyQt5
	

[options.packages.find]
where = pywfc3

[options.entry_points]
console_scripts =
    select_data = gui.select_data:main
