[metadata]
name = pyWFC3
version = 1.0.0-beta
url = https://github.com/pyAstroDude/pyWFC3
author = Sachindev Shenoy
author_email = "Sachindev Shenoy" <sachin.4m.stsci@gmail.com>
description = This is a collection of codes and scripts to facilitate WDC3 data reduction and analysis.
long_description = file:README.md
license = MIT
license_file = LICENSE
calssifier =
    "License :: OSI Approved :: MIT License"

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
	astropy>=6.1
	numpy>=2.2
	pandas>=2.2
	pyds9>=1.8
	PyQt5
	
[options.packages.find]
where = src
exclude =
    test*

[tool.setuptools.package-data]
"pyWFC3" = ["parameters/*.json"]

[options.entry_points]
console_scripts =
    select_data = pywfc3.gui.select_data:main
    make_dflat = pywfc3.flats.make_dflat:main
